uploading all the files

--- a/Index2.html
+++ b/Index2.html
@@ -4,15 +4,24 @@
         <link rel="stylesheet" type="text/css" href="Style2.css">
     </head>
     <body>
+        
         <div class="Signin">
 
-            <form>
+            <!--<form action="index.html" onsubmit="return validate()">
                 <h2>Sign In</h2>
-                <input type="text" placeholder="Enter Username">
-                <input type="text" placeholder="Enter Password">
-                <button class="btn"><a href="Index.html">Sign In</a></button>
+                <input type="text" placeholder="Enter email" id="email">
+                <input type="text" placeholder="Enter Password" id="psw">
+                <input type="Mobile no" class="input-box" placeholder="mobile no" id="mob">
+                <button class="btn" id="btn">Sign In</button>
 
+            </form>-->
+            <form action="index.html">
+                <h2>Sign in</h2>
+                <input type="email" required>
+                <input type="password" required>
+                <input type="submit" value="LOGIN">
             </form>
+            <!--<script src="form.js"></script>-->
         </div>
-    </body>
+        </body>
 </html>
