--- a/Index1.html
+++ b/Index1.html
@@ -1,30 +1,33 @@
 <html>
     <head>
         <title>Sign up Form</title>
-        <link rel="Stylesheet" href="style1.css">
+        <link rel="Stylesheet" href="style1.css"> 
+        <style>body {
+            background-image: url('Kerala.jpg');
+            background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+          }
+          </style>
     </head>
-    <style>body {
-        background-image: url('Kerala.jpg');
-        background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-      }
-      </style>
-      <div class="sign-up-form">
-          <img src="icon.png">;
-          <h1>Sign Up Now</h1>
-          <form>
-              <input type="email" class="input-box" placeholder="Your Email">
-              <input type="password" class="input-box" placeholder="Your Password">
-              <p><span><input type="checkbox"></span>I agree to the Services</p>
-              <button type="button" class="twitter-btn"><a href="Index2.html">Sign up</a></button>
-              <hr>
-              <p class="or">OR</p>
-              <button type="button" class="Signup-btn">Login with Twitter</button>
-              <p>Do you have an account? <a href="#">Sign in</a></p>
-          </form>
-      </div>
-    <body>
-        
+    
+      <body>
+        <div class="sign-up-form">
+            <img src="icon.png">
+            <h1>Sign Up Now</h1>
+            <form action="index2.html" onsubmit="return validate()">
+                <input type="email" class="input-box" placeholder="Your Email" id="email">
+                <label for="error" id="error"></label>
+                <input type="password" class="input-box" placeholder="Your Password" id="pwd">
+                <input type="number" class="input-box" placeholder="mobile no" id="mob">
+                <p><span><input type="checkbox"></span>I agree to the Services</p>
+                <button>Signup</button>
+                <hr>
+                <p class="or">OR</p>
+                <!-- <button type="button" class="Signup-btn">Login with Twitter</button> -->
+                <p>Do you have an account? <a href="#">Sign in</a></p>
+            </form>
+            <script src="form.js"></script>
+        </div>
         </body>
         </html>
